default/objects/success__Team_Level__c/success__Team_Level__c.object-meta.xml
<CustomObject>
    <description>A set of levels can be included within Collectives (Competitions, Experience Groups or Templates). This object is used to store the definition of each set of individual levels used within a Collective. Levels are an optional within Competitions and Experience Groups.</description>
    <label>Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>