default/objects/success__Team_Level__c/fields/success__Field__c.field-meta.xml
<CustomField>
    <fullName>success__Field__c</fullName>
    <description>The field name on the competitor that the level is evaluated against.</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>