default/objects/success__Team_Level__c/fields/success__Graphic__c.field-meta.xml
<CustomField>
    <fullName>success__Graphic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>success__Graphic__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <type>Lookup</type>
</CustomField>