default/objects/success__Team_Level__c/fields/success__Level_Number__c.field-meta.xml
<CustomField>
    <fullName>success__Level_Number__c</fullName>
    <label>Level Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>