default/objects/success__Team_Level__c/fields/success__Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>success__Lower_Threshold__c</fullName>
    <label>Lower Threshold</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>