default/objects/success__Team_Level__c/fields/success__Message__c.field-meta.xml
<CustomField>
    <fullName>success__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>